--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "grunt": "~0.4.2",
     "grunt-nodemon": "~0.1.2",
     "grunt-node-inspector": "~0.1.2",
-    "grunt-concurrent": "~0.4.2"
+    "grunt-concurrent": "~0.4.2",
+    "koa-livereload": "~0.1.0",
+    "grunt-contrib-watch": "~0.5.3"
   }
 }
